--- a/catalog/templates/catalog/product_form.html
+++ b/catalog/templates/catalog/product_form.html
@@ -1,28 +1,39 @@
 {% extends 'catalog/base.html' %}
 
 {% block content %}
-    <form method="post" class="row">
-        <div class="col-6">
-            <div class="card">
-                <div class="card-header">
-                    {% if object %}
-                        Редактирование блога
-                    {% else %}
-                        Добавление блога
-                    {% endif %}
+    <div class="col-12">
+        <form class="row" method="post" enctype="multipart/form-data">
+            <div class="col-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h3 class="card-title">
+                            Добавить инструмент
+                        </h3>
+                    </div>
+                    <div class="card-body">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        <button type="submit" class="buttonbtn btn-outline-success">Сохранить</button>
+                    </div>
+                    <div class="card-footer"></div>
                 </div>
-            <div class="card-body">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <button type="submit" class="btn btn-outline-success">
-                    {% if object %}
-                        Сохранить
-                    {% else %}
-                        Добавить
-                    {% endif %}
-                </button>
             </div>
+            <div class="col-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h4 class="card-title">
+                            Добавить версию
+                        </h4>
+                    </div>
+                    <div class="card-body">
+                        {{ formset.management_form }}
+                        {% for form in formset.forms %}
+                            {{ form.as_p }}
+                        {% endfor %}
+                    </div>
+                    <div class="card-footer"></div>
+                </div>
             </div>
-        </div>
-    </form>
+        </form>
+    </div>
 {% endblock %}
