--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -3,28 +3,38 @@
 {% load static %}
 
 {% block content %}
-    <div class="row">
+<div class="row">
     <div class="col-12 mb-5">
-            <a href="{% url 'catalog:product_create' %}" class="btn btn-primary">Добавить инструмент</a>
+        <a href="{% url 'catalog:product_create' %}" class="btn btn-primary">Добавить инструмент</a>
     </div>
-        {% for object in object_list %}
-            <div class="col-md-4">
-                <div class="card md-4 box-shadow">
-                    <img class="card-img-top"
-                         src="{{ object.image|media }}"
-                         alt="Card image cap">
-                            <div class="card-body">
-                                <p class="card-text">{{ object.name|title }}</p>
-                                <p> Price: {{ object.price }}</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group">
-                                <a class="btn btn-link" href="{% url 'catalog:product_update' object.pk %}">Изменить</a>
-                                <a class="btn btn-outline-danger float-right" href="{% url 'catalog:product_delete' object.pk %}">Удалить</a>
-                            </div>
-                        </div>
+    {% for object in object_list %}
+    <div class="col-md-4">
+        <div class="card md-4 box-shadow">
+            <img class="card-img-top" src="{{ object.image|media }}" alt="Card image cap">
+            <div class="card-body">
+                <p class="card-text">{{ object.name|title }}</p>
+                <p> Price: {{ object.price }}</p>
+                <span class="text-muted">{{ object.category }}</span>
+            </div>
+            <div class="card-footer">
+                <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                        <a class="btn btn-link" href="{% url 'catalog:product_update' object.pk %}">Изменить</a>
+                        <a class="btn btn-outline-danger float-right" href="{% url 'catalog:product_delete' object.pk %}">Удалить</a>
                     </div>
+                    {% if active_version %}
+                    <div>
+                        <p>{{ object_list.is_active }}</p>
+                    </div>
+                    {% else %}
+                    <div>
+                        <p>Нет активной версии</p>
+                    </div>
+                    {% endif %}
                 </div>
             </div>
-        {% endfor %}
+        </div>
     </div>
+    {% endfor %}
+</div>
 {% endblock %}
