--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -168,6 +168,13 @@
                         <li><a href="{% url 'catalog:index' %}" class="text-white">Главная</a></li>
                         <li><a href="{% url 'catalog:category' %}" class="text-white">Инстументы</a></li>
                         <li><a href="{% url 'blog:list' %}" class="text-white">Блог</a></li>
+                        {% if user.is_authenticated %}
+                            <li><a href="{% url 'users:logout' %}" class="text-white">Выйти</a></li>
+                            <li><a href="{% url 'users:profile' %}" class="text-white">Профиль</a></li>
+                        {% else %}
+                            <li><a href="{% url 'users:login' %}" class="text-white">Войти</a></li>
+                            <li><a href="{% url 'users:register' %}" class="text-white">Регистрация</a></li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
