--- a/catalog/templates/catalog/product_form.html
+++ b/catalog/templates/catalog/product_form.html
@@ -26,14 +26,15 @@
                         </h4>
                     </div>
                     <div class="card-body">
-                        {{ formset.management_form }}
-                        {% for form in formset.forms %}
-                            {{ form.as_p }}
-                        {% endfor %}
+                        <div class="card-body">
+                            {{ formset.management_form }}
+                            {% for form in formset.forms %}
+                                {{ form.as_p }}
+                            {% endfor %}
+                        </div>
+                        <div class="card-footer"></div>
                     </div>
-                    <div class="card-footer"></div>
                 </div>
-            </div>
         </form>
     </div>
 {% endblock %}
