--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -22,9 +22,9 @@
                         <a class="btn btn-link" href="{% url 'catalog:product_update' object.pk %}">Изменить</a>
                         <a class="btn btn-outline-danger float-right" href="{% url 'catalog:product_delete' object.pk %}">Удалить</a>
                     </div>
-                    {% if active_version %}
+                    {% if is_active %}
                     <div>
-                        <p>{{ object_list.is_active }}</p>
+                        <p>{{ object.product }}</p>
                     </div>
                     {% else %}
                     <div>
